# Namicode-CodeAssistant-CLI

./: .env.template  .gitignore  AGENT_PROMPT_ENHANCEMENT.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  NAMI.md  README.md  RecentError.md  SUBAGENT_OBSERVABILITY.md  Subagents.md  Task.md  UNICODE_FIX.md  pyproject.toml  setup.py  subagent_fix_suggestions.md  test_e2b.py
.claude/: settings.local.json
.nami/: NAMI.md
.nami/agents/code-documentation/: agent.md
.nami/skills/docker-deploy/: SKILL.md
.serena/: project.yml
changelog/: changelog_v0.0.11.md
deepagents-nami/: README.md  pyproject.toml
deepagents-nami/nami_deepagents/: __init__.py  graph.py
deepagents-nami/nami_deepagents/backends/: __init__.py  composite.py  filesystem.py  sandbox.py  state.py  store.py  utils.py
deepagents-nami/nami_deepagents/middleware/: __init__.py  filesystem.py  subagents.py
docs/: Architecture.md  Backend.md  EVALUATION.md  LangSmith.md  MCP.md  PROJECT_STRUCTURE.md  Streaming.md  nodejs-ui.md
evaluation/: Makefile  pyproject.toml
evaluation/deepagents_harbor/: __init__.py  deepagents_wrapper.py  namicode_wrapper.py
evaluation/scripts/: analyze.py  harbor_langsmith.py
namicode_cli/: __init__.py  __main__.py  agent.py  agent_memory.py  commands.py  compaction.py  config.py  context_manager.py  default_agent_prompt.md  dev_server.py  doctor.py  execution.py  file_ops.py  file_tracker.py  image_utils.py  init_commands.py  input.py  main.py  migrate.py  model_manager.py  nami_config.py  onboarding.py  path_approval.py  process_manager.py  project_utils.py  session_persistence.py  session_restore.py  shell.py  subagent.py  test_runner.py  token_utils.py  tools.py  ui.py
namicode_cli/default_subagents/: prompt.py  subagents.py
namicode_cli/errors/: __init__.py  handlers.py  taxonomy.py
namicode_cli/integrations/: __init__.py  daytona.py  docker.py  e2b_executor.py  modal.py  runloop.py  sandbox_factory.py
namicode_cli/mcp/: __init__.py  client.py  commands.py  config.py  middleware.py  presets.py
namicode_cli/skills/: __init__.py  commands.py  load.py  middleware.py
tests/: test_project_memory.py
tests/integration_tests/: test_sandbox_factory.py  test_sandbox_operations.py
tests/unit_tests/: test_agent.py  test_compaction.py  test_config.py  test_context_manager.py  test_dev_server.py  test_end_to_end.py  test_file_ops.py  test_imports.py  test_process_manager.py  test_session_persistence.py  test_shell.py  test_subagent_skills.py  test_subagent_ui.py  test_test_runner.py
tests/unit_tests/mcp/: __init__.py  (+3 more)
(+565 files in other folders)
